--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,16 +2,20 @@ group 'ly.img.flutter.imgly_sdk'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.5.32'
+    ext.kotlin_version = '1.9.0'
+    ext.vesdk_version = '10.9.0'
 
     repositories {
         google()
+        gradlePluginPortal()
         mavenCentral()
+        maven { url 'https://artifactory.img.ly/artifactory/imgly' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
+        classpath 'com.android.tools.build:gradle:8.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "ly.img.android.pesdk:plugin:$vesdk_version"
     }
 }
 
@@ -26,7 +30,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'ly.img.android.sdk'
 
-imglyConfig {
+IMGLY.configure {
     pesdk {
         enabled true
     }
@@ -58,7 +62,20 @@ task checkVersion {
 preBuild.dependsOn checkVersion
 
 android {
-    compileSdkVersion 31
+    if (project.android.hasProperty('namespace')) {
+        namespace 'ly.img.flutter.imgly_sdk'
+    }
+    
+    compileSdk 34
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
