--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="ly.img.flutter.imgly_sdk">
+    xmlns:tools="http://schemas.android.com/tools">
     <application>
         <provider
             tools:replace="android:enabled"
