--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.5.32'
-    ext.pesdk_version = '10.4.1'
+    ext.kotlin_version = '1.8.0'
+    ext.vesdk_version = '10.9.0'
 
     repositories {
         google()
@@ -9,9 +9,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "ly.img.android.pesdk:plugin:$pesdk_version"
+        classpath "ly.img.android.pesdk:plugin:$vesdk_version"
+        classpath "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin:$kotlin_version-1.+"
     }
 }
 
@@ -30,7 +29,7 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
